<resources>
    <string name="app_name">HealthGuard</string>
    <string name="app_introduction_01">Manage You Health.</string>
    <string name="app_introduction_02">Anytime</string>
    <string name="image">image</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="button_back">Button Back</string>
    <string name="button_continue">Continue</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="Email">Email</string>
    <string name="error_illegal_email">Email: eg.oliver.mn@email.com.</string>
    <string name="error_illegal_password1">Password: ≥6 chars, 1+ uppercase, 1+ lowercase, 1+ number.</string>
    <string name="error_illegal_password2">Password inconsistency</string>
    <string name="error_exist_email">You have already registered.</string>
    <string name="error_network">Network problem, retry.</string>
    <string name="error_unsend_email">Fail to send email.</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="password_conform">Conform Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="error_no_exist_email">Please register first</string>
    <string name="error_incorrect_password">Incorrect password, please retry.</string>
    <string name="loading">loading...</string>
    <string name="add_a_new_friends">Add a new friends</string>
    <string name="friend_s_email">Friend\'s email</string>
    <string name="verification_code">Verification code</string>
    <string name="error_no_find_user">No such user</string>
    <string name="enter_your_verification_code">Enter your verification code</string>
    <string name="error_wrong_verification">Wrong verification code, please retry</string>
    <string name="error_wrong_add_self">You can not add yourself</string>
    <string name="error_already_added">You aleady added this user</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="healthy_information">Healthy information</string>
    <string name="medical_report">Medical report</string>
    <string name="medication_reminder">Medication reminder</string>
    <string name="health_information">Health Information</string>
    <string name="systolic_pressure">Systolic Pressure</string>
    <string name="diastolic_pressure">Diastolic Pressure</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="body_temperature">Body Temperature</string>
    <string name="blood_oxygen_saturation">Blood Oxygen Saturation</string>
    <string name="submit">Submit</string>
    <string name="note">Note</string>
    <string name="upload_images">Upload images</string>
    <string name="notification">Notification</string>
    <string name="name_of_drug">Name of drug</string>
    <string name="dosage_of_drug">Dosage of drug</string>
    <string name="health">HEALTH</string>
    <string name="report">REPORT</string>
    <string name="medication">MEDICATION</string>
    <string name="healthy_info">Healthy Info</string>
    <string name="_2023_02_05_10_10">2023-02-05 10:10</string>
    <string name="normal">Normal</string>
    <string name="systolic_pressure_">Systolic Pressure:</string>
    <string name="diastolic_pressure_">Diastolic Pressure:</string>
    <string name="heart_rate_">Heart Rate:</string>
    <string name="body_temperature_">Body Temperature:</string>
    <string name="blood_oxygen_saturation_">Blood Oxygen:</string>
    <string name="mmhg"> mmHg</string>
    <string name="bpm"> bpm</string>
    <string name="c"> °C</string>
    <string name="aaa"> %</string>
    <string name="reference">Reference</string>
    <string name="name_of_drug_">Name of drug:</string>
    <string name="dosage_of_drug_">Dosage of drug:</string>
    <string name="time_to_eat">Time to eat:</string>
    <string name="note_">note:</string>
    <string name="log_out">Log out</string>
    <string name="healthy_information_alarm">Healthy Information Alarm</string>
    <string name="update">Update</string>
    <string name="blood_oxygen">Blood Oxygen</string>
    <string name="ref">Ref.</string>
</resources>