<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/middle_gray"
    android:orientation="vertical">
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/search_change_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicatorColor="@color/blue"
        android:background="@color/white"
        app:tabSelectedTextColor="@color/blue">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/search_health_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health"
            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/search_report_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report"
            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/search_medication_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medication"
            />

    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/search_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />



</LinearLayout>