<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="15dp"
    android:paddingEnd="15dp">

    <LinearLayout
        android:id="@+id/information_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageButton
            android:id="@+id/information_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-10dp"
            style="@style/sign_page_button_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_information"
            style="@style/sign_page_string_text1" />

        <!--  SYSTOLIC的输入框  -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/information_systolic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/sign_page_string_text_input1"
            android:textColorHint="@color/gray"
            app:hintTextColor="@color/gray"
            app:boxStrokeColor="@color/gray"
            android:hint="@string/systolic_pressure"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/information_systolic_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--  DIASTOLIC的输入框  -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/information_diastolic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/sign_page_string_text_input1"
            android:textColorHint="@color/gray"
            app:hintTextColor="@color/gray"
            app:boxStrokeColor="@color/gray"
            android:hint="@string/diastolic_pressure"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/information_diastolic_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--  HEART RATE的输入框  -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/information_heart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/sign_page_string_text_input1"
            android:textColorHint="@color/gray"
            app:hintTextColor="@color/gray"
            app:boxStrokeColor="@color/gray"
            android:hint="@string/heart_rate"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/information_heart_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--  Body Temperature的输入框  -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/information_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/sign_page_string_text_input1"
            android:textColorHint="@color/gray"
            app:hintTextColor="@color/gray"
            app:boxStrokeColor="@color/gray"
            android:hint="@string/body_temperature"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/information_body_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--  Blood Oxygen Saturation的输入框  -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/information_blood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/sign_page_string_text_input1"
            android:textColorHint="@color/gray"
            app:hintTextColor="@color/gray"
            app:boxStrokeColor="@color/gray"
            android:hint="@string/blood_oxygen_saturation"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/information_blood_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--使得button位于底部，和gravity配合使用-->
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/information_submit"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            style="@style/sign_page_button_continue"
            android:text="@string/submit"
            android:enabled="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/information_indicator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <!-- Logo图像 -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/logo" />
        />

        <!-- 进度指示器 -->
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"/>
    </LinearLayout>

</FrameLayout>