<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="15dp"
    android:paddingEnd="15dp">

    <LinearLayout
        android:id="@+id/reminder_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageButton
            android:id="@+id/reminder_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-10dp"
            style="@style/sign_page_button_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medication_reminder"
            style="@style/sign_page_string_text1" />

        <!--  drag name  -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reminder_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/sign_page_string_text_input1"
            android:textColorHint="@color/gray"
            app:hintTextColor="@color/gray"
            app:boxStrokeColor="@color/gray"
            android:hint="@string/name_of_drug"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reminder_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--  drag dosage  -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reminder_dosage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/sign_page_string_text_input1"
            android:textColorHint="@color/gray"
            app:hintTextColor="@color/gray"
            app:boxStrokeColor="@color/gray"
            android:hint="@string/dosage_of_drug"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reminder_dosage_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--  drag note  -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reminder_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/sign_page_string_text_input1"
            android:textColorHint="@color/gray"
            app:hintTextColor="@color/gray"
            app:boxStrokeColor="@color/gray"
            android:hint="@string/note"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reminder_note_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>
        <TimePicker
            android:id="@+id/reminder_time"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:timePickerMode="spinner"
            style="@style/Widget.MaterialComponents.TimePicker"
            />

        <!--使得button位于底部，和gravity配合使用-->
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/reminder_submit"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            style="@style/sign_page_button_continue"
            android:text="@string/submit"
            android:enabled="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reminder_indicator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <!-- Logo图像 -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/logo" />
        />

        <!-- 进度指示器 -->
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"/>
    </LinearLayout>

</FrameLayout>